--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "cocktail-api",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://durgasravani1998.github.io/cocktailApiFetch_React",
+  "homepage": "",
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
